tests/NormalTests/paczka2/big_fuzzy/90841558.err
Error in line 1: f8AVQ S415 71,3
Error in line 4: A406 S415 93,2
Error in line 10: A406 S415 78,2
Error in line 15: A406 S295 10,1
Error in line 23: o4Hf4lG S267 77,72
Error in line 20: lT4L59quJ1Q A406 49,2
Error in line 2: uNiZb7vxH S267 40,3
Error in line 30: f8AVQ S295 50,5
Error in line 35: 7lykCx5s4f S415 32,9
Error in line 34: o4Hf4lG S295 63,5
Error in line 58: N2hWgw S295 80,3
Error in line 66: N2hWgw A406 63,7
Error in line 69: o4Hf4lG A406 10,6
Error in line 72: uNiZb7vxH S267 54,8
Error in line 74: uNiZb7vxH S415 18,0
Error in line 68: N2hWgw S415 40,2
Error in line 76: A406 A406 66,1
Error in line 78: N2hWgw S295 36,2
Error in line 80: A406 S295 69,6
Error in line 87: N2hWgw S267 92,0
Error in line 108: f8AVQ A406 4,66
Error in line 106: f8AVQ S295 51,1
Error in line 105: A406 A406 22,6
Error in line 113: A406 S295 93,4
Error in line 103: lT4L59quJ1Q A406 30,1
Error in line 121: lT4L59quJ1Q S267 145,07
Error in line 104: o4Hf4lG S415 186,3
Error in line 118: lT4L59quJ1Q S267 29,5
Error in line 126: A406 S415 82,1
Error in line 128: N2hWgw S267 83,1
Error in line 138: o4Hf4lG S415 93,2
Error in line 147: o4Hf4lG S415 91,0
Error in line 111: f8AVQ A406 6,7
Error in line 151: f8AVQ S415 47,6
Error in line 135: uNiZb7vxH S267 146,7
Error in line 164: 7lykCx5s4f A406 11,3
Error in line 162: uNiZb7vxH S415 39,0
Error in line 171: uNiZb7vxH S295 44,3
Error in line 173: N2hWgw S295 18,5
Error in line 181: A406 S415 43,2
Error in line 187: lT4L59quJ1Q S267 73,0
Error in line 194: uNiZb7vxH S295 96,3
Error in line 190: A406 A406 1,8
Error in line 210: N2hWgw S267 115,8
Error in line 211: A406 A406 34,4
Error in line 213: A406 S415 42,0
Error in line 230: f8AVQ S267 -1,3
Error in line 225: N2hWgw S415 39,8
Error in line 237: N2hWgw S267 96,8
Error in line 242: lT4L59quJ1Q S295 4,8
Error in line 246: uNiZb7vxH S295 96,58
